--- a/index.html
+++ b/index.html
@@ -13,107 +13,107 @@
 </head>
 <body>
 <!-- Шапка страницы -->
-    <header>
-        <a href="#">Webstudio </a>
-    <nav>
+    <header class="header">
+        <a href="#" class="logo">Web<span class="logo-icon">studio</span></a>
+    <nav class="header-nav">
 <!-- Навигация на другие страницы -->
-        <ul>
-            <li><a href="#"> Студия</a></li>
-            <li><a href="#">Портфолио</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
+            <ul class="nav">
+                <li><a href="#" class="nav-pagination"> Студия</a></li>
+                <li><a href="#" class="nav-pagination">Портфолио</a></li>
+                <li><a href="#" class="nav-pagination">Контакты</a></li>
+            </ul>
         </nav>
 <!-- Ссылка на вебсайт-->
-        <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        
-<!-- Ссылка на телефонный номер -->
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </div>
+<div>
+    <a href="mailto:info@devstudio.com" class="nav-all">info@devstudio.com</a>
+
+    <!-- Ссылка на телефонный номер -->
+    <a href="tel:+380961111111" class="nav-all">+38 096 111 11 11</a>
+</div>
     </header>
 <!-- Уникальный контент страницы -->
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 <!-- Особенности -->
-        <section>
-        <ul>
-            <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <section class="special-section">
+        <ul class="special-container">
+            <li class="special-box">
+            <h3 class="title-list">Внимание к деталям</h3>
+            <p class="title-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <li class="special-box">
+            <h3 class="title-list">Пунктуальность</h3>
+            <p class="title-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li class="special-box">
+            <h3 class="title-list">Планирование</h3>
+            <p class="title-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <li class="special-box">
+            <h3 class="title-list">Современные технологии</h3>
+            <p class="title-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
         </section>
 <!-- Чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
+        <section class="work">
+            <h2 class="work-title">Чем мы занимаемся</h2>
+            <ul class="work-container">
+                <li class="work-box">
                 <img src="./images/box1.jpg" alt="работа 1"
                 width="370" />
                 </li>   
-                <li>
+                <li class="work-box">
                 <img src="./images/box2.jpg" alt="работа 2"
                  width="370" />
                 </li>   
-                <li>
+                <li class="work-box">
                 <img src="./images/box3.jpg" alt="работа 3"
                  width="370" />
                 </li>
             </ul>
         </section>
 <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <section class="command">
+            <h2 class="work-title">Наша команда</h2>
+            <ul class="command-container">
+                <li class="command-box">
                     <img src="./images/foto1.jpg" alt="фотография Игоря Демьяненко"
                      width="270" height="260"/>
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title-list">Игорь Демьяненко</h3>
+                    <p class="title-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="command-box">
                     <img src="./images/foto2.jpg" alt="фотография Ольги Репиной"
                      width="270" height="260" />
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title-list">Ольга Репина</h3>
+                    <p class="title-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="command-box">
                     <img src="./images/foto3.jpg" alt="фотография Николая Тарасова"
                      width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="title-list">Николай Тарасов</h3>
+                    <p class="title-text">Marketing</p>
                 </li>
-                <li>
+                <li class="command-box">
                     <img src="./images/foto4.jpg" alt="фотография Михаила Ермакова"
                      width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title-list">Михаил Ермаков</h3>
+                    <p class="title-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 <!-- футер -->
-    <footer>
-        <a href="#">Webstudio </a>
-        <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <a href="#" class="logo">Web<span class="logo-icon">studio</span></a>
+        <address class="address">
+            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com" class="nav-all">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="nav-all">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
