--- a/portfolio.html
+++ b/portfolio.html
@@ -13,94 +13,94 @@
 </head>
 <body>
 <!-- Шапка страницы -->
-    <header>
-        <a href="#">Webstudio </a>
-        <nav>
+    <header class="header">
+        <a href="#" class="logo">Web<span class="logo-icon">studio</span></a>
+        <nav class="header-nav">
 <!-- Навигация на другие страницы -->
-            <ul>
-                <li><a href="#"> Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+            <ul class="nav">
+                <li><a href="#"class="nav-pagination"> Студия</a></li>
+                <li><a href="#"class="nav-pagination">Портфолио</a></li>
+                <li><a href="#"class="nav-pagination">Контакты</a></li>
             </ul>
         </nav>
 <!-- Ссылка на вебсайт-->
         <div>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com"class="nav-all">info@devstudio.com</a>
     
 <!-- Ссылка на телефонный номер -->
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111"class="nav-all">+38 096 111 11 11</a>
         </div>
     </header>
 <!-- Уникальный контент страницы -->
     <main>
-        <section>
-        <h1>Портфолио</h1>
-        <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
+        <section class="main">
+        <h1 class="title-promo">Портфолио</h1>
+        <ul class="main-btn">
+            <li><button type="button"class="main-button">Все</button></li>
+            <li><button type="button"class="main-button">веб-сайты</button></li>
+            <li><button type="button"class="main-button">Приложения</button></li>
+            <li><button type="button"class="main-button">Дизайн</button></li>
         </ul>
         </section>
 <!-- Галерея работ -->
-        <section>
-        <h2>Галерея работ</h2>
-        <ul>
-            <li>
+        <section class="main-gallery">
+        <h2 class="title">Галерея работ</h2>
+        <ul class="main-container">
+            <li class="main-image">
                 <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="title-list">Технокряк</h3>
+                <p class="title-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img2.jpg" alt="Постер" width="370" height="294"/>
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="title-list">Постер New Orlean vs Golden Star</h3>
+                <p class="title-text">Дизайн</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img3.jpg" alt="Приложение Ресторан" width="370" height="294" />
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <h3 class="title-list">Ресторан Seafood</h3>
+                <p class="title-text">Приложение</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img4.jpg" alt="Наушники" width="370" height="294" />
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="title-list">Проект Prime</h3>
+                <p class="title-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img5.jpg" alt="Две коробки" width="370" height="294" />
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <h3 class="title-list">Проект Boxes</h3>
+                <p class="title-text">Приложение</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img6.jpg" alt="Сайт для компьютера" width="370" height="294" />
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 class="title-list">Inspiration has no Borders</h3>
+                <p class="title-text">Веб-сайт</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img7.jpg" alt="Книга" width="370" height="294" />
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <h3 class="title-list">Издание Limited Edition</h3>
+                <p class="title-text">Дизайн</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img8.jpg" alt="Название проэкта" width="370" height="294" />
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="title-list">Проект LAB</h3>
+                <p class="title-text">Маркетинг</p>
             </li>
-            <li>
+            <li class="main-image">
                 <img src="./images/img9.jpg" alt="Приложение для компьютера" width="370" height="294" />
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <h3 class="title-list">Growing Business</h3>
+                <p class="title-text">Приложение</p>
             </li>
         </ul>
         </section>
     </main>
 <!-- футер -->
-    <footer>
-        <a href="#">Webstudio </a>
-        <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <a href="#"class="logo">Web<span class="logo-icon">studio</span></a>
+        <address class="address">
+            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com"class="nav-all">info@devstudio.com</a>
+            <a href="tel:+380961111111"class="nav-all">+38 096 111 11 11</a>
         </address>
     </footer>
     
