--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <nav class="header-nav">
 <!-- Навигация на другие страницы -->
             <ul class="nav">
-                <li><a href="#" class="nav-pagination"> Студия</a></li>
-                <li><a href="#" class="nav-pagination">Портфолио</a></li>
+                <li><a href="./index.html" class="nav-pagination"> Студия</a></li>
+                <li><a href="./portfolio.html" class="nav-pagination">Портфолио</a></li>
                 <li><a href="#" class="nav-pagination">Контакты</a></li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
     <main>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-button">Заказать услугу</button>
+            <button type="button" class="hero-button"><span class="hero-button-text">Заказать услугу</span></button>
         </section>
 <!-- Особенности -->
         <section class="special-section">
@@ -83,26 +83,26 @@
                 <li class="command-box">
                     <img src="./images/foto1.jpg" alt="фотография Игоря Демьяненко"
                      width="270" height="260"/>
-                    <h3 class="title-list">Игорь Демьяненко</h3>
-                    <p class="title-text">Product Designer</p>
+                    <h3 class="command-title-list">Игорь Демьяненко</h3>
+                    <p class="command-title-text">Product Designer</p>
                 </li>
                 <li class="command-box">
                     <img src="./images/foto2.jpg" alt="фотография Ольги Репиной"
                      width="270" height="260" />
-                    <h3 class="title-list">Ольга Репина</h3>
-                    <p class="title-text">Frontend Developer</p>
+                    <h3 class="command-title-list">Ольга Репина</h3>
+                    <p class="command-title-text">Frontend Developer</p>
                 </li>
                 <li class="command-box">
                     <img src="./images/foto3.jpg" alt="фотография Николая Тарасова"
                      width="270" height="260" />
-                    <h3 class="title-list">Николай Тарасов</h3>
-                    <p class="title-text">Marketing</p>
+                    <h3 class="command-title-list">Николай Тарасов</h3>
+                    <p class="command-title-text">Marketing</p>
                 </li>
                 <li class="command-box">
                     <img src="./images/foto4.jpg" alt="фотография Михаила Ермакова"
                      width="270" height="260" />
-                    <h3 class="title-list">Михаил Ермаков</h3>
-                    <p class="title-text">UI Designer</p>
+                    <h3 class="command-title-list">Михаил Ермаков</h3>
+                    <p class="command-title-text">UI Designer</p>
                 </li>
             </ul>
         </section>
