--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
             <li><button type="button"class="main-button">веб-сайты</button></li>
             <li><button type="button"class="main-button">Приложения</button></li>
             <li><button type="button"class="main-button">Дизайн</button></li>
+            <li><button type="button" class="main-button">Маркетинг</button></li>
         </ul>
         </section>
 <!-- Галерея работ -->
@@ -48,48 +49,49 @@
         <ul class="main-container">
             <li class="main-image">
                 <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-                <h3 class="title-list">Технокряк</h3>
-                <p class="title-text">Веб-сайт</p>
+                <h3 class="main-title-list">Технокряк</h3>
+                <p class="main-title-text">Веб-сайт</p>
             </li>
             <li class="main-image">
                 <img src="./images/img2.jpg" alt="Постер" width="370" height="294"/>
-                <h3 class="title-list">Постер New Orlean vs Golden Star</h3>
-                <p class="title-text">Дизайн</p>
+                <h3 class="main-title-list">Постер New Orlean vs Golden Star</h3>
+                <p class="main-title-text">Дизайн</p>
             </li>
             <li class="main-image">
                 <img src="./images/img3.jpg" alt="Приложение Ресторан" width="370" height="294" />
-                <h3 class="title-list">Ресторан Seafood</h3>
-                <p class="title-text">Приложение</p>
+                <h3 class="main-title-list">Ресторан Seafood</h3>
+                <p class="main-title-text">Приложение</p>
+                
             </li>
             <li class="main-image">
                 <img src="./images/img4.jpg" alt="Наушники" width="370" height="294" />
-                <h3 class="title-list">Проект Prime</h3>
-                <p class="title-text">Маркетинг</p>
+                <h3 class="main-title-list">Проект Prime</h3>
+                <p class="main-title-text">Маркетинг</p>
             </li>
             <li class="main-image">
                 <img src="./images/img5.jpg" alt="Две коробки" width="370" height="294" />
-                <h3 class="title-list">Проект Boxes</h3>
-                <p class="title-text">Приложение</p>
+                <h3 class="main-title-list">Проект Boxes</h3>
+                <p class="main-title-text">Приложение</p>
             </li>
             <li class="main-image">
                 <img src="./images/img6.jpg" alt="Сайт для компьютера" width="370" height="294" />
-                <h3 class="title-list">Inspiration has no Borders</h3>
-                <p class="title-text">Веб-сайт</p>
+                <h3 class="main-title-list">Inspiration has no Borders</h3>
+                <p class="main-title-text">Веб-сайт</p>
             </li>
             <li class="main-image">
                 <img src="./images/img7.jpg" alt="Книга" width="370" height="294" />
-                <h3 class="title-list">Издание Limited Edition</h3>
-                <p class="title-text">Дизайн</p>
+                <h3 class="main-title-list">Издание Limited Edition</h3>
+                <p class="main-title-text">Дизайн</p>
             </li>
             <li class="main-image">
                 <img src="./images/img8.jpg" alt="Название проэкта" width="370" height="294" />
-                <h3 class="title-list">Проект LAB</h3>
-                <p class="title-text">Маркетинг</p>
+                <h3 class="main-title-list">Проект LAB</h3>
+                <p class="main-title-text">Маркетинг</p>
             </li>
             <li class="main-image">
                 <img src="./images/img9.jpg" alt="Приложение для компьютера" width="370" height="294" />
-                <h3 class="title-list">Growing Business</h3>
-                <p class="title-text">Приложение</p>
+                <h3 class="main-title-list">Growing Business</h3>
+                <p class="main-title-text">Приложение</p>
             </li>
         </ul>
         </section>
