--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-button"><span class="hero-button-text">Заказать услугу</span></button>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 <!-- Особенности -->
         <section class="special-section">
