Исправляет ошибки дз2

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <a href="#" class="logo">Web<span class="logo-icon">studio</span></a>
         <address class="address">
             <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com" class="nav-all">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="nav-all">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="address-all">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="address-all">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
