--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,7 @@
             <li><button type="button"class="main-button">Дизайн</button></li>
             <li><button type="button" class="main-button">Маркетинг</button></li>
         </ul>
-        </section>
 <!-- Галерея работ -->
-        <section class="main-gallery">
         <h2 class="title">Галерея работ</h2>
         <ul class="main-container">
             <li class="main-image">
@@ -101,8 +99,8 @@
         <a href="#"class="logo">Web<span class="logo-icon">studio</span></a>
         <address class="address">
             <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com"class="nav-all">info@devstudio.com</a>
-            <a href="tel:+380961111111"class="nav-all">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com"class="address-all">info@devstudio.com</a>
+            <a href="tel:+380961111111"class="address-all">+38 096 111 11 11</a>
         </address>
     </footer>
     
